Fix for social-buttons being half shown on iPhone 11

--- a/style.css
+++ b/style.css
@@ -619,8 +619,6 @@ section:nth-of-type(4){
 
 	.footer-socials button{
 		width: 20vw;
-        height: 5vh;
-		font-size: 15vw;
 	}
 }
 
